fix: Vercel error on mobile menu

--- a/app/containers/Hero/hero.module.css
+++ b/app/containers/Hero/hero.module.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
 
-    @media (max-width: 767px) {
+    @media (max-width: 900px) {
         height: 88vh;
         margin-bottom: 60px;
     }
