--- a/app/containers/MobileMenu/mobilemenu.module.css
+++ b/app/containers/MobileMenu/mobilemenu.module.css
@@ -1,7 +1,7 @@
 .mobileMenu {
     display: none;
 
-    @media (max-width: 767px) {
+    @media (max-width: 900px) {
         display: block;
         width: 100%;
         height: 80px;
